--- a/side_data_analysis.ipynb
+++ b/side_data_analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Wstępna eksploracja danych**"
+    "**Initial Data Exploration**"
    ]
   },
   {
