no data_cleaning yet

--- a/smote_lasso.ipynb
+++ b/smote_lasso.ipynb
@@ -57,7 +57,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7b114224ed50>"
+       "<pyspark.sql.session.SparkSession at 0x7a1defcb2ad0>"
       ]
      },
      "execution_count": 2,
@@ -236,23 +236,26 @@
     "            # evaluation metrics\n",
     "            evaluator_acc = MulticlassClassificationEvaluator(labelCol=\"Label\", predictionCol=\"prediction\", metricName=\"accuracy\")\n",
     "            accuracy = evaluator_acc.evaluate(predictions)\n",
-    "        \n",
+    "            \n",
+    "            evaluator_f1 = MulticlassClassificationEvaluator(labelCol=\"Label\", predictionCol=\"prediction\", metricName='fMeasureByLabel', metricLabel=1, beta=1.0)\n",
+    "            f1 = evaluator_f1.evaluate(predictions)\n",
+    "            \n",
     "            evaluator_roc = BinaryClassificationEvaluator(labelCol=\"Label\", rawPredictionCol=\"rawPrediction\", metricName=\"areaUnderROC\")\n",
     "            roc_auc = evaluator_roc.evaluate(predictions)\n",
     "\n",
-    "            df_preds = predictions.select(\"Label\", \"prediction\").toPandas()\n",
-    "            f1 = f1_score(df_preds[\"Label\"], df_preds[\"prediction\"])\n",
-    "            precision = precision_score(df_preds[\"Label\"], df_preds[\"prediction\"])\n",
-    "            recall = recall_score(df_preds[\"Label\"], df_preds[\"prediction\"])\n",
+    "            # df_preds = predictions.select(\"Label\", \"prediction\").toPandas()\n",
+    "            # f1 = f1_score(df_preds[\"Label\"], df_preds[\"prediction\"])\n",
+    "            # precision = precision_score(df_preds[\"Label\"], df_preds[\"prediction\"])\n",
+    "            # recall = recall_score(df_preds[\"Label\"], df_preds[\"prediction\"])\n",
     "\n",
     "            results.append({\n",
     "                'k_neighbors': k,\n",
     "                'sampling_strategy': strategy,\n",
     "                'accuracy': accuracy,\n",
     "                'roc_auc': roc_auc,\n",
-    "                'f1_score': f1,\n",
-    "                'precision': precision,\n",
-    "                'recall': recall\n",
+    "                'f1_score': f1\n",
+    "                # 'precision': precision,\n",
+    "                # 'recall': recall\n",
     "            })\n",
     "\n",
     "            print(f\"SMOTE(k={k}, strategy={strategy}): acc={accuracy:.4f}, roc_auc={roc_auc:.4f}, f1={f1:.4f}\")\n",
@@ -308,7 +311,9 @@
     "    .build()\n",
     "\n",
     "# evaluator\n",
-    "evaluator = MulticlassClassificationEvaluator(labelCol=\"Label\", predictionCol=\"prediction\", metricName=\"accuracy\")\n",
+    "\n",
+    "# evaluator = MulticlassClassificationEvaluator(labelCol=\"Label\", predictionCol=\"prediction\", metricName=\"accuracy\")\n",
+    "evaluator = MulticlassClassificationEvaluator(labelCol=\"Label\", predictionCol=\"prediction\", metricName='fMeasureByLabel', metricLabel=1, beta=1.0)\n",
     "\n",
     "# cross-validation\n",
     "cv = CrossValidator(estimator=pipeline,\n",
@@ -339,8 +344,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model coefficients: [0.062140688942635934,0.0020547872355367912,0.02158312617557679,-1.698701323551772e-05,-0.002689162677298364,0.002980248145497419,0.06996725621840211,0.20419489391220713,-0.07758315623862183,-2.5022187122578868e-11,-2.0563160377509117e-11,1.7541113047947684e-11,-1.6483799536232744e-11,-6.282076431737121e-11,1.1913491934079043e-11,1.884298683466252e-11,-6.185432634580977e-11,5.97587745268444e-10,-4.501111886969226e-12,-3.108071462345056e-12,-2.2599924628432663e-11,8.131168089374848e-12,-1.0401327081299462e-10,2.520917951632128e-11,1.48676416730505e-11,7.351310876836029e-11,1.2379960962093584e-11,-3.787842921659887e-11,1.933744685136499e-10,6.130427369249867e-12,-1.4294636453024177e-10,-9.423985333614836e-12,-3.026848734410114e-11,-2.629365440868106e-11]\n",
-      "Model intercept: -1.9547580475696231\n"
+      "Model coefficients: [0.062140688942635934,0.0020547872355367925,0.021583126175576853,-1.698701323551772e-05,-0.002689162677298365,0.002980248145497424,0.06996725621840215,0.2041948939122073,-0.07758315623862189,-2.5022187122578865e-11,-2.056316037750919e-11,1.75411130479477e-11,-1.6483799536232757e-11,-6.282076431737122e-11,1.1913491934079018e-11,1.8842986834662598e-11,-6.185432634580977e-11,5.975877452684425e-10,-4.50111188696925e-12,-3.1080714623450447e-12,-2.259992462843265e-11,8.131168089374848e-12,-1.0401327081299466e-10,2.520917951632131e-11,1.486764167305051e-11,7.351310876836031e-11,1.237996096209354e-11,-3.7878429216598885e-11,1.9337446851364984e-10,6.130427369249875e-12,-1.429463645302418e-10,-9.423985333614851e-12,-3.0268487344101185e-11,-2.6293654408681073e-11]\n",
+      "Model intercept: -1.954758047569619\n"
      ]
     }
    ],
@@ -348,6 +353,14 @@
     "print(f\"Model coefficients: {model.stages[1].coefficients}\")\n",
     "print(f\"Model intercept: {model.stages[1].intercept}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4aeb2097-189e-4bb3-b662-82c37924fd90",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
