--- a/main_dataset_2M_analysis.ipynb
+++ b/main_dataset_2M_analysis.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "b91dcc38-19e1-4234-bbe7-6ce861661ea0",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "8a02521a-3f0e-4df1-8b4e-219a3e80b78d",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://4eb5d20eb5d7:4041\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://a2d3e5452553:4040\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
@@ -96,10 +96,10 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x789c3fc60810>"
+       "<pyspark.sql.session.SparkSession at 0x7f1b5f75f490>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,9 +363,9 @@
     "\n",
     "# limit = 2000000\n",
     "data = spark.read.parquet(\"output_parquet\")\n",
-    "# data=data.limit(limit) #sample musi być\n",
+    "# data=data.limit(limit) \n",
     "data = data.sample(fraction=0.05)\n",
-    "data = data.repartition(64) # podział na partycje żeby przyspieszyć\n",
+    "data = data.repartition(64) \n",
     "dataPd = data.toPandas() \n",
     "\n",
     "# display the first few rows of the data\n",
@@ -1251,7 +1251,6 @@
     "\n",
     "        modes = {col: get_mode(current_df, col) for col in categorical_columns}\n",
     "\n",
-    "        # Fill categorical columns\n",
     "        for col in categorical_columns:\n",
     "            if modes[col] is not None:\n",
     "                current_df = current_df.withColumn(\n",
@@ -1259,7 +1258,6 @@
     "                    F.when(F.col(col).isNull(), modes[col]).otherwise(F.col(col))\n",
     "                )\n",
     "\n",
-    "        # Apply median imputation to numeric columns\n",
     "        if numeric_columns:\n",
     "            imputer = Imputer(\n",
     "                inputCols=numeric_columns,\n",
@@ -1269,7 +1267,6 @@
     "            imputer_model = imputer.fit(current_df)\n",
     "            current_df = imputer_model.transform(current_df)\n",
     "\n",
-    "        # Final null check\n",
     "        for col in columns_to_imputate_rand:\n",
     "            if col in current_df.columns and current_df.filter(F.col(col).isNull()).count() > 0:\n",
     "                print(f\"Column {col} in {name} still has NULL values!\")\n",
@@ -1419,28 +1416,7 @@
    "outputs": [],
    "source": [
     "# saving the cleaned dataset to parquet format\n",
-    "\n",
     "data_no_missing_values[\"iqr_cap\"].write.mode(\"overwrite\").parquet(\"dataset_no_missing_values\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "90a0028a-0f5d-4aa5-9f2d-730c926affe9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data_cleaned.write.mode(\"overwrite\").parquet(\"data_cleaned\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "187eef38-996f-455a-9d1f-844cfc497546",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# data_no_outliers[\"iqr_cap\"].write.mode(\"overwrite\").parquet(\"dataset_no_outliers_iqr_cap\")"
    ]
   },
   {
@@ -1860,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "25c4c512-fd3c-44ab-9df1-d22a7765967a",
    "metadata": {},
    "outputs": [
@@ -1868,8 +1844,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dobrana liczba komponentów (k): 27\n",
-      "Sumaryczna wyjaśnialność wariancji: 0.9113\n"
+      "Selected number of components (k): 27\n",
+      "Total explained variance: 0.9113\n"
      ]
     }
    ],
@@ -1954,7 +1930,7 @@
     }
    ],
    "source": [
-    "pca_model = model.stages[2]  # model PCA jest na etapie 2 w pipeline\n",
+    "pca_model = model.stages[2] \n",
     "print(f\"Explained Variance by PCA: {pca_model.explainedVariance.sum()}\")"
    ]
   },
