--- a/main_dataset_45M_analysis.ipynb
+++ b/main_dataset_45M_analysis.ipynb
@@ -214,8 +214,7 @@
     "\n",
     "# limit = 2000000\n",
     "data = spark.read.parquet(\"output_parquet\")\n",
-    "data = data.repartition(64) # podział na partycje żeby przyspieszyć\n",
-    "\n",
+    "data = data.repartition(64) \n",
     "\n",
     "# display the first few rows of the data\n",
     "# dataPd = data.sample(fraction=0.05)\n",
@@ -738,7 +737,6 @@
     "\n",
     "        modes = {col: get_mode(current_df, col) for col in categorical_columns}\n",
     "\n",
-    "        # Fill categorical columns\n",
     "        for col in categorical_columns:\n",
     "            if modes[col] is not None:\n",
     "                current_df = current_df.withColumn(\n",
@@ -746,7 +744,6 @@
     "                    F.when(F.col(col).isNull(), modes[col]).otherwise(F.col(col))\n",
     "                )\n",
     "\n",
-    "        # Apply median imputation to numeric columns\n",
     "        if numeric_columns:\n",
     "            imputer = Imputer(\n",
     "                inputCols=numeric_columns,\n",
@@ -756,7 +753,6 @@
     "            imputer_model = imputer.fit(current_df)\n",
     "            current_df = imputer_model.transform(current_df)\n",
     "\n",
-    "        # Final null check\n",
     "        for col in columns_to_imputate_rand:\n",
     "            if col in current_df.columns and current_df.filter(F.col(col).isNull()).count() > 0:\n",
     "                print(f\"Column {col} in {name} still has NULL values!\")\n",
@@ -811,7 +807,7 @@
     "print(data_no_missing_values[\"iqr_cap\"].count())\n",
     "\n",
     "print(\"\\nColumn Names:\")\n",
-    "print(data_no_missing_values[\"iqr_cap\"].columns)\n"
+    "print(data_no_missing_values[\"iqr_cap\"].columns)"
    ]
   },
   {
@@ -1133,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "25c4c512-fd3c-44ab-9df1-d22a7765967a",
    "metadata": {},
    "outputs": [
@@ -1141,14 +1137,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dobrana liczba komponentów (k): 27\n",
-      "Sumaryczna wyjaśnialność wariancji: 0.9105\n"
+      "Selected number of components (k): 27\n",
+      "Total explained variance: 0.9105\n"
      ]
     }
    ],
    "source": [
     "best_k = next(i + 1 for i, cum_var in enumerate(cumulative_variance) if cum_var >= 0.90)\n",
-    "# best_k = 28 # około 90% wyjaśnialności, dla 30 komponentów było 95% \n",
     "\n",
     "print(f\"Selected number of components (k): {best_k}\")\n",
     "print(f\"Total explained variance: {cumulative_variance[best_k - 1]:.4f}\")"
@@ -1903,14 +1898,6 @@
     "\n",
     "print(f\"Prediction percantage == 1: {result:.2f}%\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "420bbfdc-c7fc-4916-a367-3b1d5892c77a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
